# sitemap-parser

./: README.md  pyproject.toml  pyrightconfig.json
scripts/: ruff.sh
sitemap_parser/: config.py  constants.py  main.py  sitemap.py
