[tool.poetry]
name = "sitemap-parser"
version = "0.1.0"
description = ""
authors = ["archdrdr <archdroider@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
lxml = "^5.3.0"
loguru = "^0.7.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.2"
types-beautifulsoup4 = "^4.12.0.20241020"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Mypy settings
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
packages = ["sitemap_parser", "tests"]

# Ruff settings
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"
